--- a/src/hugo.yaml
+++ b/src/hugo.yaml
@@ -52,9 +52,8 @@ outputs:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  # description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
+  description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
   author: domuro
-  # author: ["Me", "You"] # multiple authors
 
   defaultTheme: dark
   disableThemeToggle: true
@@ -72,8 +71,12 @@ params:
   # comments: false
   images: ["images/papermod-cover.png"]
 
+  homeInfoParams:
+    Title: Derek Omuro
+    Content: just my personal notes
+
   profileMode:
-    enabled: true
+    enabled: false
     title: Derek Omuro
     imageUrl: "#"
     imageTitle: " "
