--- a/src/hugo.yaml
+++ b/src/hugo.yaml
@@ -52,7 +52,7 @@ outputs:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
+  # description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
   author: domuro
 
   defaultTheme: dark
@@ -89,12 +89,10 @@ params:
       #   url: tags
 
   socialIcons:
-    # - name: github
-    #   title: View Source on Github
-    #   url: "https://github.com/adityatelange/hugo-PaperMod"
-    # - name: Discord
-    #   title: Join discord community
-    #   url: "https://discord.gg/ahpmTvhVmp"
+    - name: github
+      url: "https://github.com/domuro"
+    - name: linkedin
+      url: "https://www.linkedin.com/in/domuro"
     # - name: X
     #   title: Share PaperMod on X/Twitter
     #   url: "https://x.com/intent/tweet/?text=Checkout%20Hugo%20PaperMod%20%E2%9C%A8%0AA%20fast,%20clean,%20responsive%20Hugo%20theme.&url=https://github.com/adityatelange/hugo-PaperMod&hashtags=Hugo,PaperMod"
